Fixing browser overflow, this is needed because the initial map is huge and get scaled down (so we are not working with floating point pixels, but whole pixels) and this leaves the browser side bars even after scale-down.

--- a/nodewatcher/modules/frontend/ip_space/static/css/ipspace.css
+++ b/nodewatcher/modules/frontend/ip_space/static/css/ipspace.css
@@ -25,3 +25,7 @@
     width: 100%;
     transform-origin: top left;
 }
+
+body{
+    overflow: hidden;
+}
